fc-test-support/performance-testing/deployment/fc/fc-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fedcat-service
  labels:
    app: fedcat-service
  namespace: fedcat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fedcat-service
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 50%
  template:
    metadata:
      labels:
        app: fedcat-service
    spec:
      containers:
        - name: fedcat-service-server-image
          image: registry.gitlab.com/gaia-x/data-infrastructure-federation-services/cat/fc-service/fc-service-server:1.0.0
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8081
          volumeMounts:
            - name: fc-file-store
              mountPath: /var/lib/fc-service
              subPath: filestore
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8081
            initialDelaySeconds: 60
            periodSeconds: 30
          resources: { }
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - fedcat-postgres
                      - fedcat-neo4j-db
              topologyKey: "kubernetes.io/hostname"
      volumes:
        - name: fc-file-store
          persistentVolumeClaim:
            claimName: fedcat-filestore-claim
      restartPolicy: Always
