fc-test-support/performance-testing/deployment/fc/fc-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fedcat-service
  namespace: fedcat
  labels:
    app: fc-service
spec:
  ports:
    - name: "8081"
      port: 8081
      targetPort: 8081
  selector:
    app: fedcat-service
  type: ClusterIP
